--- a/config/.git-rc
+++ b/config/.git-rc
@@ -1,3 +1,10 @@
 
 alias gcfg="g cfg"
 alias gcg="g cg"
+
+alias gcgg="g cgg"
+alias gcga="g cga"
+alias gcgga="g cgga"
+alias gcgl="g cgl"
+alias gcgd="g cgd"
+alias gcgda="g cgda"
