--- a/ls/.git-rc
+++ b/ls/.git-rc
@@ -12,3 +12,11 @@ alias gfns="g fns"
 
 alias glu="g lu"
 alias glsu="g lsu"
+
+alias gdbt="g dbt"
+alias gdbu="g dbu"
+
+alias gabt="g abt"
+alias gabu="g abu"
+
+alias gbrm="g brm"
