--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -5,6 +5,8 @@ alias gpr="g pr"
 alias grb="g rb"
 alias grba="g rba"
 alias grbc="g rbc"
+alias grbo="g rbo"
+alias rbo="g rbo"
 alias grbs="g rbs"
 
 alias grc="g rc"
