--- a/rebase/.gitconfig
+++ b/rebase/.gitconfig
@@ -3,6 +3,7 @@
   rb      = rebase
   rba     = rebase --abort
   rbc     = rebase --continue
+  rbo     = rebase --onto
   rbm     = rebase master
   rbs     = rebase --skip
   rc      = rebase --continue
