--- a/rev-list/.git-rc
+++ b/rev-list/.git-rc
@@ -3,6 +3,6 @@
 alias gac="g ac '%h'"
 alias gah="g ah"
 alias grla="g rla"
-alias grl="g rl"
+alias grvl="g rvl"
 alias grlfp="g rlfp"
 alias grvp="g rvp"
