--- a/rm/.git-rc
+++ b/rm/.git-rc
@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
 
+alias grmr="g rmr"
 alias rmu="git ls-files --other --exclude-standard | xargs rm -f"
 alias grmlso="g rmlso"
 
