--- a/merge/.git-rc
+++ b/merge/.git-rc
@@ -3,5 +3,11 @@ alias gm="g m"
 alias gma="g ma"
 alias gmt="g mt"
 
+alias gmm="g mm"
 alias gmn="g mn"
 alias gmne="g mne"
+alias gmmne="g mmne"
+
+alias gmu="g mu"
+alias gmun="g mun"
+alias gmune="g mune"
