--- a/ls/.git-rc
+++ b/ls/.git-rc
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
 alias gls="g ls"
+alias glt="g lt"
 
 alias gfn="g fn"
 
@@ -9,6 +10,22 @@ alias gfnp="g fnp"
 
 alias gfs="g fs"
 alias gfns="g fns"
+
+alias glo="g lo"
+alias glso="g lso"
+
+alias gla="g la"
+
+alias glc="g lc"
+alias glcu="g lcu"
+alias glcs="g lcs"
+alias glcc="g lcc"
+alias glc1="g lc | head -n 1"
+
+alias gld="g ld"
+alias gldu="g ldu"
+alias glds="g lds"
+alias gldc="g ldc"
 
 alias glu="g lu"
 alias glsu="g lsu"
