--- a/config/.git-rc
+++ b/config/.git-rc
@@ -1,30 +1,15 @@
 
-alias gcfg="g cfg"
+alias gcf="g cf"
 alias gcg="g cg"
-
-alias gcgg="g cgg"
+alias gcfa="g cfa"
 alias gcga="g cga"
-alias gcgga="g cgga"
+alias gcfl="g cfl"
 alias gcgl="g cgl"
+alias gcfd="g cfd"
 alias gcgd="g cgd"
+alias gcfda="g cfda"
 alias gcgda="g cgda"
-
-git-add-global-file() {
-    config="$1"
-    shift
-    for file in "$@"; do
-	if [ -s "$file" ] && ! git config --global --get-all "$config" | grep "$file" >/dev/null; then
-	    git config --global --add "$config" "$file"
-	fi
-    done
-}
-
-git_add_global_config_file() {
-    git-add-global-file "include.path" "$@"
-}
-export -f git_add_global_config_file
-
-git_add_global_ignore_file() {
-    git-add-global-file "core.excludesfile" "$@"
-}
-export -f git_add_global_ignore_file
+alias gcfi="g cfi"
+alias gcgi="g cgi"
+alias gcfig="g cfig"
+alias gcgig="g cgig"
