--- a/ls/.gitconfig
+++ b/ls/.gitconfig
@@ -1,66 +1,68 @@
 [alias]
-	l       = ls-files
-	ls      = ls-files
-	lo      = ls-files --other --exclude-standard --directory --no-empty-directory
-	lso     = ls-files --other --exclude-standard --directory --no-empty-directory
+  l       = ls-files
+  ls      = ls-files
+  lr      = ls-files --recurse-submodules
+  lsr     = ls-files --recurse-submodules
+  lo      = ls-files --other --exclude-standard --directory --no-empty-directory
+  lso     = ls-files --other --exclude-standard --directory --no-empty-directory
 
-	lt = ls-tree
+  lt = ls-tree
 
-	lsh = ls-hashes
+  lsh = ls-hashes
 
-	fn = find
+  fn = find
 
-	fns = find-suffix
-	fs = find-suffix
+  fns = find-suffix
+  fs = find-suffix
 
-	fnp = find-prefix
-	fp = find-prefix
+  fnp = find-prefix
+  fp = find-prefix
 
-	lsu = list-unstaged
-	lu = list-unstaged
+  lsu = list-unstaged
+  lu = list-unstaged
 
-	list-added = diff --cached --name-only --diff-filter=A
-	la = diff --cached --name-only --diff-filter=A
+  list-added = diff --cached --name-only --diff-filter=A
+  la = diff --cached --name-only --diff-filter=A
 
-	list-changed = diff --name-only --diff-filter=M
-	lc = diff --name-only --diff-filter=M
+  list-changed = diff --name-only --diff-filter=M
+  lc = diff --name-only --diff-filter=M
 
-	ld = list-deleted
+  ld = list-deleted
 
-	list-deleted-unstaged = diff --name-only --diff-filter=D
-	ldu = diff --name-only --diff-filter=D
+  list-deleted-unstaged = diff --name-only --diff-filter=D
+  ldu = diff --name-only --diff-filter=D
 
-	list-deleted-staged = diff --cached --name-only --diff-filter=D
-	lds = diff --cached --name-only --diff-filter=D
+  list-deleted-staged = diff --cached --name-only --diff-filter=D
+  lds = diff --cached --name-only --diff-filter=D
 
-	list-deleted-cached = diff --cached --name-only --diff-filter=D
-	ldc = diff --cached --name-only --diff-filter=D
+  list-deleted-cached = diff --cached --name-only --diff-filter=D
+  ldc = diff --cached --name-only --diff-filter=D
 
-	lc = list-changed
+  lc = list-changed
 
-	list-changed-unstaged = diff --name-only --diff-filter=M
-	lcu = diff --name-only --diff-filter=M
+  list-changed-unstaged = diff --name-only --diff-filter=M
+  lcu = diff --name-only --diff-filter=M
 
-	list-changed-staged = diff --name-only --cached --diff-filter=M
-	lcs = diff --name-only --cached --diff-filter=M
+  list-changed-staged = diff --name-only --cached --diff-filter=M
+  lcs = diff --name-only --cached --diff-filter=M
 
-	list-changed-cached = diff --name-only --cached --diff-filter=M
-	lcc = diff --name-only --cached --diff-filter=M
+  list-changed-cached = diff --name-only --cached --diff-filter=M
+  lcc = diff --name-only --cached --diff-filter=M
 
-	deleted-by-them = list-status UD
-	dbt = list-status UD
+  deleted-by-them = list-status UD
+  dbt = list-status UD
 
-	deleted-by-us = list-status DU
-	dbu = list-status DU
+  deleted-by-us = list-status DU
+  dbu = list-status DU
 
-	added-by-them = list-status UA
-	abt = list-status UA
+  added-by-them = list-status UA
+  abt = list-status UA
 
-	added-by-us = list-status AU
-	abu = list-status AU
+  added-by-us = list-status AU
+  abu = list-status AU
 
-	both-deleted = list-status DD
-	brm = list-status DD
+  both-deleted = list-status DD
+  brm = list-status DD
 
-	list-deleted = list-status ' D'
-	ld = list-status ' D'
+  list-deleted = list-status ' D'
+  ld = list-status ' D'
