push -n {origin,upstream} aliases

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -15,3 +15,8 @@ alias gpto="g pto"
 alias gspf="g spf"
 alias gspfo="g spfo"
 alias gspfu="g spfu"
+
+alias gpon="g pon"
+alias gpno="g pno"
+alias gpun="g pun"
+alias gpnu="g pnu"
