--- a/submodule/.gitconfig
+++ b/submodule/.gitconfig
@@ -4,11 +4,17 @@
   sms  = submodules
   smst = submodule status
   sf   = submodule foreach --quiet
-  smf = submodule foreach --quiet
+  smf  = submodule foreach --quiet
   ssh  = submodule-shas
   sst  = submodule-shas
-  smu  = submodule update --quiet
-  su   = submodule update --quiet
+  smu  = submodule update
+  smur = submodule update --recursive
+  smuq = submodule update --quiet
+  smurq = submodule update --recursive --quiet
+  su   = submodule update
+  suq  = submodule update --quiet
+  sur  = submodule update --recursive
+  surq = submodule update  --recursive --quiet
   smcc = submodule-check-commits
   sml  = submodule foreach --quiet 'echo $name'
   smp  = submodule foreach --quiet 'echo $path'
