recursive fetch aliases

--- a/fetch/.git-rc
+++ b/fetch/.git-rc
@@ -3,5 +3,8 @@
 alias gf="g f"
 alias gfo="g fo"
 alias gfu="g fu"
-
-
+alias gfr="g fr"
+alias gfro="g fro"
+alias gfru="g fru"
+alias gfor="g fro"
+alias gfur="g fru"
