--- a/fetch/.gitconfig
+++ b/fetch/.gitconfig
@@ -1,4 +1,9 @@
 [alias]
-  f = fetch --tags
-  fo = fetch --tags origin
-  fu = fetch --tags upstream
+  f   = fetch --tags
+  fo  = fetch --tags origin
+  fu  = fetch --tags upstream
+  fr  = fetch --tags --recurse-submodules
+  fro = fetch --tags --recurse-submodules origin
+  fru = fetch --tags --recurse-submodules upstream
+  for = fetch --tags --recurse-submodules origin
+  fur = fetch --tags --recurse-submodules upstream
