fetch --all aliases

--- a/fetch/.git-rc
+++ b/fetch/.git-rc
@@ -1,6 +1,9 @@
 #!/usr/bin/env bash
 
 alias gf="g f"
+alias gft="g ft"
+alias gfa="g fa"
+alias gfta="g fta"
 alias gfo="g fo"
 alias gfu="g fu"
 alias gfr="g fr"
