--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -8,6 +8,7 @@ alias gcm="g cm"
 alias gcmp="g cmp"
 alias gcn="g cn"
 alias gcne="g cne"
+alias gcnm="g cnm"
 alias gcam="g cam"
 alias gcane="g cane"
 alias gcaane="g caane"
