submodule update --rebase aliases

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -10,9 +10,10 @@ alias gsuq="g suq"
 alias gsur="g sur"
 alias gsurq="g surq"
 
-
 alias gsmu="g smu"
+alias gsmuf="g smuf"
 alias gsmur="g smur"
+alias gsmurr="g smurr"
 alias gsmuq="g smuq"
 alias gsmurq="g smurq"
 
