--- a/submodule/.gitconfig
+++ b/submodule/.gitconfig
@@ -1,21 +1,23 @@
 [alias]
-  sm   = submodule
-  sma  = submodule add --quiet
-  sms  = submodules
-  smst = submodule status
-  sf   = submodule foreach --quiet
-  smf  = submodule foreach --quiet
-  ssh  = submodule-shas
-  sst  = submodule-shas
-  smu  = submodule update
-  smur = submodule update --recursive
-  smuq = submodule update --quiet
+  sm    = submodule
+  sma   = submodule add --quiet
+  sms   = submodules
+  smst  = submodule status
+  sf    = submodule foreach --quiet
+  smf   = submodule foreach --quiet
+  ssh   = submodule-shas
+  sst   = submodule-shas
+  smu   = submodule update
+  smuf  = submodule update --recursive --rebase
+  smur  = submodule update --recursive
+  smurr = submodule update --recursive --rebase
+  smuq  = submodule update --quiet
   smurq = submodule update --recursive --quiet
-  su   = submodule update
-  suq  = submodule update --quiet
-  sur  = submodule update --recursive
-  surq = submodule update  --recursive --quiet
-  smcc = submodule-check-commits
-  sml  = submodule foreach --quiet 'echo $name'
-  smp  = submodule foreach --quiet 'echo $path'
-  smlp = submodule foreach --quiet 'echo $name $path $sha1'
+  su    = submodule update
+  suq   = submodule update --quiet
+  sur   = submodule update --recursive
+  surq  = submodule update  --recursive --quiet
+  smcc  = submodule-check-commits
+  sml   = submodule foreach --quiet 'echo $name'
+  smp   = submodule foreach --quiet 'echo $path'
+  smlp  = submodule foreach --quiet 'echo $name $path $sha1'
