--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -12,3 +12,17 @@ alias gcnm="g cnm"
 alias gcam="g cam"
 alias gcane="g cane"
 alias gcaane="g caane"
+
+alias gcap="g cap"
+alias gcaap="g caap"
+alias gcapm="g capm"
+alias gcaapm="g caapm"
+alias gcpp="g cpp"
+alias gcppa="g cppa"
+alias gcppam="g cppam"
+alias gcppm="g cppm"
+alias gpp="g pp"
+alias gppr="g ppr"
+alias gppa="g ppa"
+alias gppam="g ppam"
+alias gppm="g ppm"
