--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -5,6 +5,8 @@ alias gdft="g dft"
 alias gdc="g dc"
 alias gdh="g diff HEAD"
 alias gdn="g dn"
+alias gdno="g dno"
+alias gdns="g dns"
 alias gdp="g dp"
 alias gds="g ds"
 alias gdt="g dt"
