make git-push-parents push the initial leaf repo before recursing up; also add aliases

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -22,7 +22,8 @@ alias gcppa="g cppa"
 alias gcppam="g cppam"
 alias gcppm="g cppm"
 alias gpp="g pp"
-alias gppr="g ppr"
 alias gppa="g ppa"
 alias gppam="g ppam"
 alias gppm="g ppm"
+alias gppr="g ppr"
+alias gpps="g pps"
