reset, push-receive helpers

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -32,3 +32,5 @@
 
         add-global-config-file = add-global-file include.path
         agi = add-global-ignore
+
+        allow-pushes = config receive.denyCurrentBranch ignore
