--- a/reset/.git-rc
+++ b/reset/.git-rc
@@ -5,6 +5,6 @@ alias gr.="g reset ."
 alias grs.="g reset ."
 alias grp="g rp"
 alias grh="g rh"
-alias grh="g rhh"
+alias grhh="g rhh"
 alias grs="g rs"
 alias grrs="g rrs"
