--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -34,3 +34,6 @@
         agi = add-global-ignore
 
         allow-pushes = config receive.denyCurrentBranch ignore
+        aps = allow-pushes
+        receive-pushes = allow-pushes
+        rcp = receive-pushes
