--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -21,3 +21,11 @@ alias gdmb="g dmb"
 alias gdmbr="g dmbr"
 
 alias gnb="g nb"
+
+alias gus="g us"
+
+alias gsb="g sb"
+
+alias glb="g lb"
+
+alias gab="g ab"
