more graph aliases

--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -3,5 +3,8 @@
 alias ggc="g ggc"
 alias ggp="g gp"
 alias ggr="g gr"
+alias ggrd="g grd"
+alias ggrdh="g grdh"
+alias ggrdn="g grdn"
 alias ggrh="g grh"
 alias ggrn="g grn"
