--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -1,30 +1,26 @@
-
+alias gftd="g ftd"
+alias gis="g is"
+alias gism="g ism"
 alias gps="g ps"
+alias gsf="g sf"
 alias gsm="g sm"
 alias gsma="g sma"
+alias gsmcc="g smcc"
+alias gsmf="g smf"
+alias gsml="g sml"
+alias gsmlp="g smlp"
+alias gsmp="g smp"
 alias gsms="g sms"
-alias gsmfe="g smfe"
-alias gsf="g sf"
-
+alias gsmst="g smst"
+alias gsmu="g smu"
+alias gsmuf="g smuf"
+alias gsmuq="g smuq"
+alias gsmur="g smur"
+alias gsmurq="g smurq"
+alias gsmurr="g smurr"
+alias gssh="g ssh"
+alias gsst="g sst"
 alias gsu="g su"
 alias gsuq="g suq"
 alias gsur="g sur"
 alias gsurq="g surq"
-
-alias gsmu="g smu"
-alias gsmuf="g smuf"
-alias gsmur="g smur"
-alias gsmurr="g smurr"
-alias gsmuq="g smuq"
-alias gsmurq="g smurq"
-
-alias gsml="g sml"
-alias gsmp="g smp"
-alias gsshs="g sshs"
-alias gsst="g sst"
-alias gssh="g ssh"
-
-alias gism="g ism"
-alias gis="g is"
-
-alias gftd="g ftd"
