--- a/remote/.git-rc
+++ b/remote/.git-rc
@@ -12,8 +12,11 @@ defn glpr g lpr
 defn gmr g mr
 defn gup g up
 defn gamr g amr
+defn grgu g rgu
 defn grr g rr
 defn grmv g rmv
 defn grrm g rrm
 defn grsh g rsh
 defn grsu g rsu
+defn ggru g gru
+defn gsru g sru
