add "commit-push -a -m" alias

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -17,6 +17,7 @@ alias gcap="g cap"
 alias gcaap="g caap"
 alias gcapm="g capm"
 alias gcaapm="g caapm"
+alias gcpam="g cpam"
 alias gcpp="g cpp"
 alias gcppa="g cppa"
 alias gcppam="g cppam"
