grep alias tweaks

--- a/grep/.git-rc
+++ b/grep/.git-rc
@@ -5,9 +5,9 @@ alias gfc="g fc"
 alias ggi="g gi"
 alias ggl="g gl"
 alias ggn="g gn"
-alias ggp="g gr"
-alias ggpi="g gri"
-alias ggpl="g grl"
-alias ggpn="g grn"
+alias ggp="g gp"
+alias ggpi="g gpi"
+alias ggpl="g gpl"
+alias ggpn="g gpn"
 
 alias gkl="g kl"
