--- a/tag/.gitconfig
+++ b/tag/.gitconfig
@@ -1,8 +1,12 @@
 [alias]
-  t = tag
-  ts = tags
   gt = get-tag
   it = is-tag
+
+  t  = tags
   td = tag -d
   tf = tag -f
+  tg = tag
+  th = tags -n 10
   tl = tag -l
+  tn = tags -n
+  tp = tag --format='%(color:green)%(objectname:short)%(color:reset)%09%(color:yellow)%(refname:strip=2)%(color:reset)%09%(color:red)%(creatordate:iso)%(color:reset)%09%(color:blue)%(creatordate:relative)%(color:reset)'
