diff, commit, config, remote helpers

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -15,6 +15,7 @@ alias gcaane="g caane"
 
 alias gcap="g cap"
 alias gcaap="g caap"
+alias gcpm="g cpm"
 alias gcapm="g capm"
 alias gcaapm="g caapm"
 alias gcpam="g cpam"
