--- a/config/.git-rc
+++ b/config/.git-rc
@@ -3,16 +3,22 @@ alias gcf="g cf"
 alias gcg="g cg"
 alias gcfa="g cfa"
 alias gcga="g cga"
-alias gcfl="g cfl"
-alias gcgl="g cgl"
 alias gcfd="g cfd"
 alias gcgd="g cgd"
-alias gcfda="g cfda"
-alias gcgda="g cgda"
 alias gcfi="g cfi"
 alias gcgi="g cgi"
 alias gcfig="g cfig"
 alias gcgig="g cgig"
+alias gcfl="g cfl"
+alias gcgl="g cgl"
+alias gcfs="g cfs"
+alias gcgs="g cgs"
+alias gcfu="g cfu"
+alias gcgu="g cgu"
+alias gcfda="g cfda"
+alias gcgda="g cgda"
+alias gcfua="g cfua"
+alias gcgua="g cgua"
 alias gagi="g agi"
 
 alias gaps="g aps"
