--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -9,6 +9,11 @@ alias gdno="g dno"
 alias gdns="g dns"
 alias gdp="g dp"
 alias gds="g ds"
+alias gdsc="g dsc"
+alias gdsh="g dsh"
+alias gdsp="g dsp"
+alias gdsph="g dsph"
+alias gdsu="g dsu"
 alias gdt="g dt"
 alias gdtp="g dtp"
 alias gdu="g du"
