--- a/status/.git-rc
+++ b/status/.git-rc
@@ -1,9 +1,10 @@
 #!/usr/bin/env bash
 
 alias gs="g s"
+alias gsc="g sc"
+alias gst="g st"
 alias gsts="g sts"
 alias gstp="g stp"
-alias gst="g st"
 alias gsu="g su"
 alias gsx="g sx"
 
