submodules init, sha helpers

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -7,11 +7,14 @@ alias gsm="g sm"
 alias gsma="g sma"
 alias gsmcc="g smcc"
 alias gsmf="g smf"
+alias gsmi="g smi"
 alias gsml="g sml"
 alias gsmlp="g smlp"
 alias gsmp="g smp"
 alias gsms="g sms"
 alias gsmst="g smst"
+alias gsmt="g smt"
+alias gsmir="g smir"
 alias gsmu="g smu"
 alias gsmuf="g smuf"
 alias gsmuq="g smuq"
