--- a/submodule/.gitconfig
+++ b/submodule/.gitconfig
@@ -2,16 +2,22 @@
   ps    = !git pull --rebase && git submodule update --recursive
   sm    = submodule
   sma   = submodule add --quiet
+  smi   = submodule init
   sms   = submodules
   smst  = submodule status
+  smt   = submodule status
   sf    = submodule foreach --quiet
   smf   = submodule foreach --quiet
   ssh   = submodule-shas
   sst   = submodule-shas
   smu   = submodule update
+  smir  = !git submodule init && git submodule update --recursive
   smuf  = submodule update --recursive --rebase
   smur  = submodule update --recursive
   smurr = submodule update --recursive --rebase
+  smsh  = submodule-sha
+  smsha = submodule-sha
+  smid  = submodule-sha
   smuq  = submodule update --quiet
   smurq = submodule update --recursive --quiet
   su    = submodule update
